<resources>
    <string name="app_name">sites</string>
    <string name="button_addSite">Add site</string>
    <string name="hint_siteTitle">Site title</string>
    <string name="hint_siteDescription">Description </string>
    <string name="menu_addSite">Add Site</string>
    <string name="menu_cancelSite">Cancel</string>
    <string name="menu_deleteSite">Delete</string>
    <string name="menu_saveSite">Save</string>
    <string name="enter_site_title">Please enter a Site Title</string>
    <string name="SplashScreenText">Archeological Sites</string>
    <string name="button_addImage">Add Image</string>
    <string name="select_site_image">Select site image</string>
    <string name="change_site_image">Change site image</string>
    <string name="checkbox_text">visited</string>
    <string name="hint_notes">notes</string>
    <string name="title_activity_map">Map</string>
    <string name="button_setLocation">SET LOCATION</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Sign up / Login</string>
    <string name="title_activity_site_list">Site list</string>
    <string name="title_activity_site">Site</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_location">Location</string>
    <string name="siteTitle">Sites</string>
    <string name="sitePicture">Site Picture</string>
    <string name="siteDescription">Description of site</string>
    <string name="menu_showMap">Show Map</string>
    <string name="title_activity_favourites">Favourites</string>
    <string name="menu_showFavourites">Show Favourites</string>
</resources>