<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_add"
        android:title="@string/menu_addSite"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_map"
        android:title="@string/menu_showMap"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_favourites"
        android:title="@string/menu_showFavourites"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_settings"
        android:title="@string/menu_settings"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_logout"
        android:title="@string/menu_logout"
        android:visible="true"
        app:showAsAction="never" />

</menu>