<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.wit.sites.activities.SiteActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="-16dp">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:fitsSystemWindows="true"
                app:elevation="0dip"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleTextColor="@color/colorPrimary" />
            </com.google.android.material.appbar.AppBarLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/appBarLayout"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="148dp"
                android:layout_marginBottom="-148dp">

                <EditText
                    android:id="@+id/siteTitle"
                    android:layout_width="248dp"
                    android:layout_height="57dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="72dp"
                    android:autofillHints=""
                    android:hint="@string/hint_siteTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                </EditText>

                <EditText
                    android:id="@+id/description"
                    android:layout_width="249dp"
                    android:layout_height="62dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/hint_siteDescription"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/siteTitle" />

                <CheckBox
                    android:id="@+id/checkBoxVisited"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/checkbox_text"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="@id/dateVisted"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description" />

                <TextView
                    android:id="@+id/dateVisted"
                    android:layout_width="117dp"
                    android:layout_height="35dp"
                    android:text="TextView"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/checkBoxVisited"
                    android:visibility="invisible"
                    app:layout_constraintTop_toBottomOf="@+id/description" />

                <Button
                    android:id="@+id/chooseImage1"
                    android:layout_width="379dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="19dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxVisited" />

                <ImageView
                    android:id="@+id/SiteImage1"
                    android:layout_width="401dp"
                    android:layout_height="178dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chooseImage1"
                    app:srcCompat="@color/cardview_shadow_end_color" />

                <Button
                    android:id="@+id/chooseImage2"
                    android:layout_width="379dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="19dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/SiteImage1" />

                <ImageView
                    android:id="@+id/SiteImage2"
                    android:layout_width="401dp"
                    android:layout_height="178dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chooseImage2"
                    app:srcCompat="@color/cardview_shadow_end_color" />

                <Button
                    android:id="@+id/chooseImage3"
                    android:layout_width="379dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="19dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/SiteImage2" />

                <ImageView
                    android:id="@+id/SiteImage3"
                    android:layout_width="401dp"
                    android:layout_height="178dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chooseImage3"
                    app:srcCompat="@color/cardview_shadow_end_color" />

                <Button
                    android:id="@+id/chooseImage4"
                    android:layout_width="379dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="19dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/SiteImage3" />

                <ImageView
                    android:id="@+id/SiteImage4"
                    android:layout_width="401dp"
                    android:layout_height="178dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chooseImage4"
                    app:srcCompat="@color/cardview_shadow_end_color" />


                <EditText
                    android:id="@+id/SiteNotes"
                    android:layout_width="401dp"
                    android:layout_height="178dp"
                    android:hint="@string/hint_notes"
                    android:inputType="textMultiLine"
                    android:maxLength="100"
                    android:maxLines="5"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/SiteImage4">
                </EditText>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>